Kubernetes/jmaze-k8s-cilium/media/jackett/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  labels:
    app: jackett
    app.kubernetes.io/instance: jackett
    app.kubernetes.io/name: jackett
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jackett
      app.kubernetes.io/name: jackett
      app.kubernetes.io/instance: jackett
      pod.name: main
  template:
    metadata:
      labels:
        app: jackett
        app.kubernetes.io/name: jackett
        app.kubernetes.io/instance: jackett
        pod.name: main
    spec:
      restartPolicy: Always
      dnsPolicy: None
      # We want jackett to use a public DNS server. Cluster DNS points to NextDNS.
      dnsConfig:
        nameservers:
          - 10.43.25.5 # CoreDNS External Google Service Cluster IP
      containers:
        - name: jackett
          image: linuxserver/jackett:latest
          imagePullPolicy: Always
          ports:
            - name: main
              containerPort: 9117
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
          resources:
            requests:
              memory: "256Mi"
              cpu: "150m"
            limits:
              memory: "1024Mi"
              cpu: "600m"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jackett
